--- a/mokepones/style.css
+++ b/mokepones/style.css
@@ -1,8 +1,8 @@
-.titulo {
-    color: blue;
-    width: 300px;
-    height: 60px;
-    background-color: blanchedalmond;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+
+body {
+    font-family: "Fredoka", sans-serif;
+    background-color: #021526;
 }
 #seleccionar-mascota {
     display: flex;
@@ -10,14 +10,29 @@
     align-items: center;
     justify-content: center;
 }
+.titulo {
+    color: whitesmoke;
+    font-size: 36px;
+}
+.subtitulo {
+    color: whitesmoke;
+    font-size: 20px;
+}
+.tarjetas {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
 .tarjetas-de-mokepon {
-    width: 100px;
-    height: 100px;
-    background: aquamarine;
-    padding: 10px;
-    margin: 10px;
+    color: whitesmoke;
+    font-size: 10px;
+    background: #03346E;
+    padding: 20px;
     box-sizing: border-box;
-    border: 1px solid rebeccapurple;
+    border-radius: 20px;
+}
+.tarjetas-de-mokepon img {
+    width: 50px;
 }
 input {
     display: none;
