--- a/mokepones/style.css
+++ b/mokepones/style.css
@@ -2,8 +2,9 @@
 
 body {
     font-family: "Fredoka", sans-serif;
-    background-color: #021526;
+    background-color: #6482AD;
 }
+
 #seleccionar-mascota {
     display: flex;
     flex-direction: column;
@@ -11,11 +12,12 @@ body {
     justify-content: center;
 }
 .titulo {
-    color: whitesmoke;
+    color: #F5EDED;
     font-size: 40px;
+    margin: 10px;
 }
 .subtitulo {
-    color: whitesmoke;
+    color: #F5EDED;
     font-size: 24px;
 }
 .tarjetas {
@@ -24,15 +26,15 @@ body {
     margin-bottom: 12px;
 }
 .tarjetas-de-mokepon {
-    color: whitesmoke;
+    color: #F5EDED;
     font-size: 12px;
-    background: #03346E;
+    background: #7FA1C3;
     padding: 8px 20px;
     box-sizing: border-box;
     border-radius: 20px;
 }
 .tarjetas-de-mokepon:hover {
-    border: 2px dashed yellowgreen;
+    border: 2px dashed #F5EDED;
 }
 .tarjetas-de-mokepon img {
     width: 100px;
@@ -52,4 +54,48 @@ input {
 }
 #boton-mascota:hover {
     background-color: rgba(255, 228, 196, 0.459);
+}
+
+#seleccionar-ataque {
+    flex-direction: column;
+    align-items: center;
+}
+.boton-ataque {
+    color: #F5EDED;
+    font-size: 12px;
+    background: #7FA1C3;
+    padding: 8px 20px;
+    box-sizing: border-box;
+    border-radius: 16px;
+    border-color: transparent;
+    margin: 2px 10px;
+    width: 120px;
+    height: 48pxpx;
+}
+.boton-ataque:hover {
+    border: 2px dashed #F5EDED;
+}
+
+#mensajes {
+    background: #E2DAD6;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#boton-reiniciar {
+    font-size: 12px;
+    background: #F5EDED;
+    padding: 8px 20px;
+    box-sizing: border-box;
+    border-radius: 16px;
+    border-color: transparent;
+    margin: 2px 10px;
+    width: 120px;
+    height: 60pxpx;
+}
+#boton-reiniciar:hover {
+    border: 2px dashed #6482AD
 }
