termino basico del juego, queda todo chulo, 43

--- a/mokepones/style.css
+++ b/mokepones/style.css
@@ -44,6 +44,9 @@ body {
 input {
     display: none;
 }
+input:checked + label {
+    background-color: #86AB89;
+}
 #boton-mascota {
     font-family: "Grey Qo", cursive;
     font-size: 32px;
