--- a/style.css
+++ b/style.css
@@ -145,19 +145,28 @@ input:checked + label {
 }
 #selector-movimiento {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid #F5EDED;
+    border-radius: 80px;
 }
 .boton-movimiento {
-    background: #F5EDED;
+    font-family: "Grey Qo", cursive;
+    font-size: 16px;
+    background: #7FA1C3;
+    color: aquamarine;
     box-sizing: border-box;
     border-radius: 16px;
     border-color: transparent;
     margin: 4px 10px;
     width: 60px;
-    height: 36px;
-    font-size: 16px;
+    height: 36px;   
+}
+.boton-movimiento:hover {
+    border: 2px dashed #F5EDED;
 }
 
-@media (max-width: 360px){
+@media (max-width: 470px){
     .tarjetas {
         flex-direction: column;
     }
